Added Settings and fixed bugs

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Gateway of Employment(GOE) is a platform where one can post jobs and internships for their company or personal work. From professional companies looking for an employee to individuals, anybody can post on this platform. GOE will help you get the best and the most responsible employee for your company. This platform bridges the recruiter-employee gap and aims to bring help out more and more people to get respectable jobs as per their capabilities and aid the companies to hire proficient employees possessing the ability to make the work look best. We bridge the gap between worker and recruiter. The recruiter will be able to reach out to a large number of people and meet them virtually, thereby selecting the best. Job seekers can come over and apply for available jobs."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
